# boids

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: cd.yaml  ci.yaml  md.yaml
assets/fonts/: FiraSans-Bold.kayak_font
assets/models/: bird.glb
src/: debug.rs  game.rs  input.rs  main.rs  player.rs  ui.rs
