[package]
name = "boids"
version = "0.1.1"
edition = "2021"
authors = ["Emmett AlJneibi<ma2178@sussex.ac.uk>"]
repository = "https://github.com/EmmettJayhart/boids"
description = "A boids simulation to demonstrate three dimensional flocking behavior"
publish = false

# ------------------------------------------------------------------------- #

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "png",
    "x11",
] }
bevy_boids = { path = "../bevy_boids" }
bevy-inspector-egui = "0.17.0"
# bevy_rapier3d = "0.20.0"
leafwing-input-manager = "0.8.0"
rand = "0.8.5"

# Keep in sync with bevy
image = "0.24"
winit = "0.27"

[build-dependencies]
embed-resource = "1.8.0"

# ------------------------------------------------------------------------- #

[features]
dev = ["bevy/dynamic"]
