[package]
name = "boids"
version = "0.1.5"
edition = "2021"
authors = ["Emmett Jayhart<emmett@jayhart.io>"]
repository = "https://github.com/EmmettJayhart/boids"
description = "A boids simulation to demonstrate three dimensional flocking behavior"
publish = false

# ------------------------------------------------------------------------- #

[dependencies]
bevy = { version = "0.9.1", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "png",
    "x11",
] }
# bevy_boids = { path = "../bevy_boids", features = [
bevy_boids = { git = "https://github.com/EmmettJayhart/bevy_boids", features = [
    "reflect",
] }
bevy-inspector-egui = "0.17.0"
bevy_rapier3d = { version = "0.20.0", features = ["simd-stable", "parallel"] }
leafwing-input-manager = "0.8.0"
rand = "0.8.5"

# Keep in sync with bevy
image = "0.24"
winit = "0.27"

[build-dependencies]
embed-resource = "1.8.0"

# ------------------------------------------------------------------------- #

[features]
dev = ["bevy/dynamic"]
